--- a/dbt/.dbt/profiles.yml
+++ b/dbt/.dbt/profiles.yml
@@ -5,7 +5,7 @@ cmc_elt:
       job_execution_timeout_seconds: 300
       job_retries: 1
       keyfile: /root/.dbt/turing-project-m3-s4-1591ea509586.json
-      location: EU
+      location: US
       method: service-account
       priority: interactive
       project: turing-project-m3-s4
