--- a/dbt/cmc_elt/dbt_project.yml
+++ b/dbt/cmc_elt/dbt_project.yml
@@ -33,5 +33,10 @@ clean-targets:         # directories to be removed by `dbt clean`
 models:
   cmc_elt:
     # Config indicated by + and applies to all files under models/example/
-    example:
-      +materialized: view
+    intermediate:
+      prices:
+        +materialized: table
+
+    marts:
+      prices:
+        +materialized: table
