Preparations for docker operator

--- a/Airflow/docker-compose.yml
+++ b/Airflow/docker-compose.yml
@@ -30,6 +30,8 @@ x-airflow-common:
     - ${AIRFLOW_PROJ_DIR:-.}/plugins:/opt/airflow/plugins
     - ${AIRFLOW_PROJ_DIR:-.}/data:/opt/airflow/data
     - ${AIRFLOW_PROJ_DIR:-.}/backups:/opt/airflow/backups
+    - /var/run/docker.sock:/var/run/docker.sock
+    - shared-creds-volume:/opt/airflow/config/shared_creds
   user: "${AIRFLOW_UID:-50000}:0"
   depends_on:
     &airflow-common-depends-on
@@ -251,3 +253,4 @@ services:
 
 volumes:
   postgres-db-volume:
+  shared-creds-volume:
