More work done preparing for dockerised dbt run on Airflow

--- a/dbt/.dbt/profiles.yml
+++ b/dbt/.dbt/profiles.yml
@@ -4,7 +4,7 @@ cmc_elt:
       dataset: dev_cmc_data
       job_execution_timeout_seconds: 300
       job_retries: 1
-      keyfile: /root/.dbt/turing-project-m3-s4-1591ea509586.json
+      keyfile: /shared_creds/gcp_default.json
       location: US
       method: service-account
       priority: interactive
