--- a/dbt/cmc_elt/dbt_project.yml
+++ b/dbt/cmc_elt/dbt_project.yml
@@ -36,6 +36,7 @@ models:
     intermediate:
       prices:
         +materialized: incremental
+        +unique_key: 'surrogate_key'
 
     marts:
       prices:
